--- a/mdb/templates/host.django.html
+++ b/mdb/templates/host.django.html
@@ -1,3 +1,8 @@
-{% extends "base.html" %}
+{% extends "base-menu.html" %}
 
 {% block title %}MDB - Host{% endblock %}
+
+
+{% block main-info %}
+<h1>Pick your host</h1>
+{% endblock %}
